favicon and adjustments

--- a/index.html
+++ b/index.html
@@ -6,17 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AdriaINgroup</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
+    <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <img class="body__splash" src="img/splash.jpg" alt="Splash image">
-    <div class="body__contact">
-        <span class="contact__info"><a href="mailto:denis.crorealestate@gmail.com">denis.crorealestate@gmail.com</a></span>
-        <br />
-        <span class="contact__info"><a href="tel:+385989279171">+385(0)98 927 9171</a></span>
-    </div>
+    <img class="body__splash" src="img/splash.jpg" alt="Splash image consisting of a team of professional real estate agents for Split area">
+    <img class="body__house" src="img/house.jpg" alt="A small house ornament representing our business in real estate">
     <div class="body__footer">
         <a href="http://www.njuskalo.hr/agencija/adriainvest-nekretnine"><img src="img/njuskalo.png" alt=""></a>
         <a href="https://www.facebook.com/adriaINgroup/ "><img src="img/facebook.png" alt=""></a>
+        <a href="tel:+385989279171"><img src="img/phone.png" alt=""></a>
+        <a href="mailto:denis.crorealestate@gmail.com"><img src="img/mail.png" alt=""></a>
         <a href="https://www.youtube.com/channel/UC5sUty1GE_tI_aNF_Z6MB1Q"><img src="img/youtube.png" alt=""></a>
         <a href="https://www.instagram.com/denishlapcic/"><img src="img/instagram.png" alt=""></a>
         <a href="https://www.youtube.com/results?search_query=croatia+full+of+life "><img src="img/croatia.png" alt=""></a>
