hover and visit us

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <a href="https://www.youtube.com/results?search_query=croatia+full+of+life "><img src="img/croatia.png" alt=""></a>
         <a href="http://www.artinterijeri.hr/"><img src="img/art.png" alt=""></a>
     </div>
+	<h1 id="visit" >VISIT US</h1>
     <img class="pull-right" src="img/hgk.png" alt="Hrvatska gospodarska komora">
    
 </body>
