--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
         <a href="https://www.facebook.com/adriaINgroup/ "><img src="img/facebook.png" alt=""></a>
         <a href="tel:+385989279171"><img src="img/phone.png" alt=""></a>
         <a href="mailto:denis.crorealestate@gmail.com"><img src="img/mail.png" alt=""></a>
-        <a href="https://www.youtube.com/channel/UC5sUty1GE_tI_aNF_Z6MB1Q"><img src="img/youtube.png" alt=""></a>
+        <a href="https://www.youtube.com/channel/UC7mi9QecJSagLqbrs-GGMxQ"><img src="img/youtube.png" alt=""></a>
         <a href="https://www.instagram.com/denishlapcic/"><img src="img/instagram.png" alt=""></a>
         <a href="https://www.youtube.com/results?search_query=croatia+full+of+life "><img src="img/croatia.png" alt=""></a>
         <a href="http://www.artinterijeri.hr/"><img src="img/art.png" alt=""></a>
+        <a href="http://www.that-s-it.com/"><img src="img/thatsIt.png" alt=""></a>
     </div>
 	<h1 id="visit" >VISIT US</h1>
     <img class="pull-right" src="img/hgk.png" alt="Hrvatska gospodarska komora">
