--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+<img class="body__splash0" src="img/splash0.jpg" alt="Splash image">
     <img class="body__splash" src="img/splash.jpg" alt="Splash image consisting of a team of professional real estate agents for Split area">
-    <img class="body__house" src="img/house.jpg" alt="A small house ornament representing our business in real estate">
     <div class="body__footer">
         <a href="http://www.njuskalo.hr/agencija/impacto-nekretnine"><img src="img/njuskalo.png" alt=""></a>
         <a href="https://www.facebook.com/adriaINgroup/ "><img src="img/facebook.png" alt=""></a>
@@ -35,10 +35,10 @@
         <a href="https://www.youtube.com/channel/UC7mi9QecJSagLqbrs-GGMxQ"><img src="img/youtube.png" alt=""></a>
         <a href="https://www.instagram.com/denishlapcic/"><img src="img/instagram.png" alt=""></a>
         <a href="https://www.youtube.com/results?search_query=croatia+full+of+life "><img src="img/croatia.png" alt=""></a>
-        <a href="http://www.artinterijeri.hr/"><img src="img/art.png" alt=""></a>
+        <a href="http://www.realestatecroatia.com/hrv/list.asp?id=21943"><img src="img/art.jpg" alt=""></a>
         <a href="http://www.that-s-it.com/"><img src="img/thatsIt.png" alt=""></a>
     </div>
-	<h1 id="visit" >VISIT US</h1>
+	
     <img class="pull-right" src="img/hgk.png" alt="Hrvatska gospodarska komora">
    
 </body>
