--- a/index.html
+++ b/index.html
@@ -336,14 +336,14 @@
                                             <wp-action class="action3 ">
                                                 <a>
                                                     <wp-action-text>
-                                                        <wp-title>Prodaja kuća</wp-title>
+                                                        <wp-title>House selling</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
                                             <wp-action class="action3 ">
                                                 <a href="https://www.njuskalo.hr/agencija/impacto-nekretnine?categoryId=10919">
                                                     <wp-action-text>
-                                                        <wp-title>Iznajmljivanje kuća</wp-title>
+                                                        <wp-title>House renting</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
@@ -357,14 +357,14 @@
                                             <wp-action class="action3 ">
                                                 <a href="https://www.njuskalo.hr/agencija/impacto-nekretnine?categoryId=9580">
                                                     <wp-action-text>
-                                                        <wp-title>Prodaja stanova</wp-title>
+                                                        <wp-title>Apartment selling</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
                                             <wp-action class="action3 ">
                                                 <a href="https://www.njuskalo.hr/agencija/impacto-nekretnine?categoryId=10920">
                                                     <wp-action-text>
-                                                        <wp-title>Iznajmljivanje stanova</wp-title>
+                                                        <wp-title>Apartment renting</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
@@ -378,7 +378,7 @@
                                             <wp-action class="action3 ">
                                                 <a href="https://www.njuskalo.hr/agencija/impacto-nekretnine?categoryId=9581">
                                                     <wp-action-text>
-                                                        <wp-title>Prodaja zemljišta i projekata</wp-title>
+                                                        <wp-title>Land and project selling</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
@@ -392,14 +392,14 @@
                                             <wp-action class="action3 ">
                                                 <a href="https://www.njuskalo.hr/agencija/impacto-nekretnine?categoryId=9585">
                                                     <wp-action-text>
-                                                        <wp-title>Prodaja poslovnih prostora</wp-title>
+                                                        <wp-title>Business space selling</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
                                             <wp-action class="action3 ">
                                                 <a href="https://www.njuskalo.hr/agencija/impacto-nekretnine?categoryId=9839">
                                                     <wp-action-text>
-                                                        <wp-title>Iznajmljivanje poslovnih prostora</wp-title>
+                                                        <wp-title>Business space renting</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
