Test without video

--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
                 </wp-header>
                 <wp-content>
                     <wp-box class="" style="background-color: rgba(255, 255, 255, 0); width: 100vw; height: 70vh; position: relative; margin-top: calc(var(--headerHeight) * (-1));">
-                        <wp-video class="wp-graphic videoPlayer_0">
-                            <video playsinline autoplay muted loop>
+                        <wp-video class="wp-graphic videoPlayer_0" style="background-color: #333;">
+                            <!--<video playsinline autoplay muted loop>
                                 <source src="./videos/rock.mp4" type="video/mp4">
-                            </video>
+                            </video>-->
                         </wp-video>
                         <wp-box style="background-color: var(--theme); width: 40vw; height: 45vh; clip-path: polygon(31% 0px, 100% 0px, 100% 100%, 20% 70%); position: absolute; right: 0px; top: var(--headerHeight);"></wp-box>
                         <wp-box class="textGrid" style="position: absolute; right: 0px; width: 50vw; top: calc(var(--headerHeight) + 10vh);">
