--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 }
                 wp-video + wp-box {
                     width: 75vw !important;
-                    clip-path: polygon(46% 0px, 100% 0px, 100% 100%, 20% 70%) !important; 
                 }
                 wp-action.action1 a .wp-graphic {
                     min-width: 40px !important;
@@ -333,9 +332,9 @@
                                 <source src="./videos/rock.mp4" type="video/mp4">
                             </video>-->
                         </wp-video>
-                        <wp-box style="background-color: var(--theme); width: 40vw; height: 45vh; clip-path: polygon(31% 0px, 100% 0px, 100% 100%, 20% 70%); position: absolute; right: 0px; top: var(--headerHeight);"></wp-box>
+                        <wp-box style="background-color: var(--theme); width: 40vw; height: 45vh;"></wp-box>
                         <wp-box class="textGrid" style="position: absolute; right: 0px; width: 50vw; top: calc(var(--headerHeight) + 10vh);">
-                            <wp-text-section class="textGridA" style="width: 100%; background-color: var(--baseDark); clip-path: polygon(14% 0px, 100% 0px, 86% 100%, 0px 100%); color: var(--baseLight); padding: 0px 11%; box-sizing: border-box; font-size: calc(1.3vw + 1.3vh); position: relative; right: 0px; white-space: pre; height: fit-content; line-height: calc(3vw + 3vh); text-align: center;">LET YOUR DREAMS</wp-text-section>
+                            <wp-text-section class="textGridA" style="width: 100%; background-color: var(--baseDark); color: var(--baseLight); padding: 0px 11%; box-sizing: border-box; font-size: calc(1.3vw + 1.3vh); position: relative; right: 0px; white-space: pre; height: fit-content; line-height: calc(3vw + 3vh); text-align: center;">LET YOUR DREAMS</wp-text-section>
                             <wp-text-section class="textGridD" style="color: var(--baseLight); font-size: calc(8vw + 8vh); font-family: 'Kunstler Script'; line-height: 0; padding-left: 0vw; white-space: pre; transform: scaleY(1.3); text-align: center; padding-right: 7vw; text-shadow: rgba(0, 0, 0, 0.34) 0px 3px 19px;">come true</wp-text-section>
                             <wp-text-section class="textGridB" style="font-size: calc(1vh + 1vw); white-space: pre; padding-left: 1vw;">Best price in market</wp-text-section>
                             <wp-text-section class="textGridC" style="font-size: calc(1vh + 1vw); white-space: pre;">Hottest property list</wp-text-section>
