--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <style id="customStyle" type="text/css">
 
             @font-face {
-                font-family: 'Kunstler Script';
+                font-family: 'Customfont';
                 src: url("./fonts/KUNSTLER.ttf");
             }
             @media (orientation: portrait) {
@@ -328,14 +328,14 @@
                 <wp-content>
                     <wp-box class="" style="background-color: rgba(255, 255, 255, 0); width: 100vw; height: 70vh; position: relative; margin-top: calc(var(--headerHeight) * (-1));">
                         <wp-video class="wp-graphic videoPlayer_0" style="background-color: #333;">
-                            <!--<video playsinline autoplay muted loop>
+                            <video playsinline autoplay muted loop>
                                 <source src="./videos/rock.mp4" type="video/mp4">
-                            </video>-->
+                            </video>
                         </wp-video>
-                        <wp-box style="background-color: var(--theme); width: 40vw; height: 45vh;"></wp-box>
+                        <wp-box style="width: 40vw; height: 45vh; background-image:url(./images/bg1.PNG); background-size: cover; position: absolute; right: 0px; top: var(--headerHeight);"></wp-box>
                         <wp-box class="textGrid" style="position: absolute; right: 0px; width: 50vw; top: calc(var(--headerHeight) + 10vh);">
-                            <wp-text-section class="textGridA" style="width: 100%; background-color: var(--baseDark); color: var(--baseLight); padding: 0px 11%; box-sizing: border-box; font-size: calc(1.3vw + 1.3vh); position: relative; right: 0px; white-space: pre; height: fit-content; line-height: calc(3vw + 3vh); text-align: center;">LET YOUR DREAMS</wp-text-section>
-                            <wp-text-section class="textGridD" style="color: var(--baseLight); font-size: calc(8vw + 8vh); font-family: 'Kunstler Script'; line-height: 0; padding-left: 0vw; white-space: pre; transform: scaleY(1.3); text-align: center; padding-right: 7vw; text-shadow: rgba(0, 0, 0, 0.34) 0px 3px 19px;">come true</wp-text-section>
+                            <wp-text-section class="textGridA" style="width: 100%; background-image:url(./images/bg2.PNG); background-size: 100%; background-repeat: no-repeat; background-position: center; color: var(--baseLight); padding: 0px 11%; box-sizing: border-box; font-size: calc(1.3vw + 1.3vh); position: relative; right: 0px; white-space: pre; height: fit-content; line-height: calc(3vw + 3vh); text-align: center;">LET YOUR DREAMS</wp-text-section>
+                            <wp-text-section class="textGridD" style="color: var(--baseLight); font-size: calc(8vw + 8vh); font-family: 'Customfont'; line-height: 0; padding-left: 0vw; white-space: pre; transform: scaleY(1.3); text-align: center; padding-right: 7vw; text-shadow: rgba(0, 0, 0, 0.34) 0px 3px 19px;">come true</wp-text-section>
                             <wp-text-section class="textGridB" style="font-size: calc(1vh + 1vw); white-space: pre; padding-left: 1vw;">Best price in market</wp-text-section>
                             <wp-text-section class="textGridC" style="font-size: calc(1vh + 1vw); white-space: pre;">Hottest property list</wp-text-section>
                         </wp-box>
