--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
         <link id="Video" rel="stylesheet" type="text/css" href="./style/snippets/Video/Video.css">
         <style id="customStyle" type="text/css">
 
-            @font-face {
-                font-family: 'Customfont';
-                src: url("./fonts/KUNSTLER.ttf");
+            font-face {font-family: "Kunstler Script";
+                src: url("//db.onlinewebfonts.com/t/3e13bee6781c476e142a2bca4d9ab99c.eot");
+                src: url("//db.onlinewebfonts.com/t/3e13bee6781c476e142a2bca4d9ab99c.eot?#iefix") format("embedded-opentype"),
+                url("//db.onlinewebfonts.com/t/3e13bee6781c476e142a2bca4d9ab99c.woff2") format("woff2"),
+                url("//db.onlinewebfonts.com/t/3e13bee6781c476e142a2bca4d9ab99c.woff") format("woff"),
+                url("//db.onlinewebfonts.com/t/3e13bee6781c476e142a2bca4d9ab99c.ttf") format("truetype"),
+                url("//db.onlinewebfonts.com/t/3e13bee6781c476e142a2bca4d9ab99c.svg#Kunstler Script") format("svg");
             }
             @media (orientation: portrait) {
                 .hideInMobile{
@@ -335,7 +339,7 @@
                         <wp-box style="width: 40vw; height: 45vh; background-image:url(./images/bg1.png); background-size: cover; position: absolute; right: 0px; top: var(--headerHeight);"></wp-box>
                         <wp-box class="textGrid" style="position: absolute; right: 0px; width: 50vw; top: calc(var(--headerHeight) + 10vh);">
                             <wp-text-section class="textGridA" style="width: 100%; background-image:url(./images/bg2.png); background-size: 100%; background-repeat: no-repeat; background-position: center; color: var(--baseLight); padding: 0px 11%; box-sizing: border-box; font-size: calc(1.3vw + 1.3vh); position: relative; right: 0px; white-space: pre; height: fit-content; line-height: calc(3vw + 3vh); text-align: center;">LET YOUR DREAMS</wp-text-section>
-                            <wp-text-section class="textGridD" style="color: var(--baseLight); font-size: calc(8vw + 8vh); font-family: 'Customfont'; line-height: 0; padding-left: 0vw; white-space: pre; transform: scaleY(1.3); text-align: center; padding-right: 7vw; text-shadow: rgba(0, 0, 0, 0.34) 0px 3px 19px;">come true</wp-text-section>
+                            <wp-text-section class="textGridD" style="color: var(--baseLight); font-size: calc(8vw + 8vh); font-family: 'Kunstler Script'; line-height: 0; padding-left: 0vw; white-space: pre; transform: scaleY(1.3); text-align: center; padding-right: 7vw; text-shadow: rgba(0, 0, 0, 0.34) 0px 3px 19px;">come true</wp-text-section>
                             <wp-text-section class="textGridB" style="font-size: calc(1vh + 1vw); white-space: pre; padding-left: 1vw;">Best price in market</wp-text-section>
                             <wp-text-section class="textGridC" style="font-size: calc(1vh + 1vw); white-space: pre;">Hottest property list</wp-text-section>
                         </wp-box>
