text, font, header fix

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>AdriaINgroup</title>
         <link id="fontAwesome" rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link id="googleFonts" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+        <link href="//db.onlinewebfonts.com/c/3e13bee6781c476e142a2bca4d9ab99c?family=Kunstler+Script" rel="stylesheet" type="text/css"/>
         <link id="index" rel="stylesheet" type="text/css" href="./style/index.css">
         <link id="Action" rel="stylesheet" type="text/css" href="./style/snippets/Action/Action.css">
         <link id="Application" rel="stylesheet" type="text/css" href="./style/snippets/Application/Application.css">
@@ -19,14 +20,7 @@
         <link id="Video" rel="stylesheet" type="text/css" href="./style/snippets/Video/Video.css">
         <style id="customStyle" type="text/css">
 
-            font-face {font-family: "Kunstler Script";
-                src: url("//db.onlinewebfonts.com/t/3e13bee6781c476e142a2bca4d9ab99c.eot");
-                src: url("//db.onlinewebfonts.com/t/3e13bee6781c476e142a2bca4d9ab99c.eot?#iefix") format("embedded-opentype"),
-                url("//db.onlinewebfonts.com/t/3e13bee6781c476e142a2bca4d9ab99c.woff2") format("woff2"),
-                url("//db.onlinewebfonts.com/t/3e13bee6781c476e142a2bca4d9ab99c.woff") format("woff"),
-                url("//db.onlinewebfonts.com/t/3e13bee6781c476e142a2bca4d9ab99c.ttf") format("truetype"),
-                url("//db.onlinewebfonts.com/t/3e13bee6781c476e142a2bca4d9ab99c.svg#Kunstler Script") format("svg");
-            }
+       
             @media (orientation: portrait) {
                 .hideInMobile{
                     display: none !important;
@@ -44,6 +38,13 @@
                     min-width: 40px !important;
                     margin: 0px 0px !important; 
                 } 
+                .action1{
+                    margin: 10px 3px !important; 
+                }
+                wp-logo img{
+                    height: 50px !important; 
+                    width: 50px !important; 
+                }
             }
             .centerAtFooter {
                 display: flex;
@@ -354,14 +355,14 @@
                                             <wp-action class="action3 ">
                                                 <a>
                                                     <wp-action-text>
-                                                        <wp-title>House selling</wp-title>
+                                                        <wp-title>Houses for sale</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
                                             <wp-action class="action3 ">
                                                 <a href="https://www.njuskalo.hr/agencija/impacto-nekretnine?categoryId=10919">
                                                     <wp-action-text>
-                                                        <wp-title>House renting</wp-title>
+                                                        <wp-title>Houses for rent</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
@@ -375,14 +376,14 @@
                                             <wp-action class="action3 ">
                                                 <a href="https://www.njuskalo.hr/agencija/impacto-nekretnine?categoryId=9580">
                                                     <wp-action-text>
-                                                        <wp-title>Apartment selling</wp-title>
+                                                        <wp-title>Apartments for sale</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
                                             <wp-action class="action3 ">
                                                 <a href="https://www.njuskalo.hr/agencija/impacto-nekretnine?categoryId=10920">
                                                     <wp-action-text>
-                                                        <wp-title>Apartment renting</wp-title>
+                                                        <wp-title>Apartments for rent</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
@@ -396,7 +397,7 @@
                                             <wp-action class="action3 ">
                                                 <a href="https://www.njuskalo.hr/agencija/impacto-nekretnine?categoryId=9581">
                                                     <wp-action-text>
-                                                        <wp-title>Land and project selling</wp-title>
+                                                        <wp-title>Land and projects for sale</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
@@ -410,14 +411,14 @@
                                             <wp-action class="action3 ">
                                                 <a href="https://www.njuskalo.hr/agencija/impacto-nekretnine?categoryId=9585">
                                                     <wp-action-text>
-                                                        <wp-title>Business space selling</wp-title>
+                                                        <wp-title>Business space for sale</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
                                             <wp-action class="action3 ">
                                                 <a href="https://www.njuskalo.hr/agencija/impacto-nekretnine?categoryId=9839">
                                                     <wp-action-text>
-                                                        <wp-title>Business space renting</wp-title>
+                                                        <wp-title>Business space for rent</wp-title>
                                                     </wp-action-text>
                                                 </a>
                                             </wp-action>
