--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     <wp-box class="" style="background-color: rgba(255, 255, 255, 0); width: 100vw; height: 70vh; position: relative; margin-top: calc(var(--headerHeight) * (-1));">
                         <wp-video class="wp-graphic videoPlayer_0" style="background-color: #333;">
                             <video playsinline autoplay muted loop>
-                                <source src="./videos/rock.mp4" type="video/mp4">
+                                <source src="./videos/splitVideo.mp4" type="video/mp4">
                             </video>
                         </wp-video>
                         <wp-box style="width: 40vw; height: 45vh; background-image:url(./images/bg1.png); background-size: cover; position: absolute; right: 0px; top: var(--headerHeight);"></wp-box>
@@ -348,7 +348,7 @@
                     <wp-box class="contentSection" style="border-top-width: 10px; padding: 0px; box-sizing: border-box;">
                         <wp-collection class="">
                             <wp-collection-data class="grid" style="grid-template-columns: 1fr 1fr 1fr 1fr; gap: 0px 0px; padding: 0px;">
-                                <wp-info tabindex="0" class="postcard trH"><img src="./images/prodajaNajamKuca.jpg" class="tt scale10percent addBlur wp-graphic">
+                                <wp-info tabindex="0" class="postcard trH"><img src="./images/prodajaNajamKuca.jpg" class="tt scale10percent wp-graphic">
                                     <wp-info-container class="tt darkenBackground">
                                         <wp-main-info></wp-main-info>
                                         <wp-info-actions class="ttd fadeIn">
@@ -369,7 +369,7 @@
                                         </wp-info-actions>
                                     </wp-info-container>
                                 </wp-info>
-                                <wp-info tabindex="0" class="postcard trH"><img src="./images/prodajaNajamStanova.jpg" class="tt scale10percent addBlur wp-graphic">
+                                <wp-info tabindex="0" class="postcard trH"><img src="./images/prodajaNajamStanova.jpg" class="tt scale10percent wp-graphic">
                                     <wp-info-container class="tt darkenBackground">
                                         <wp-main-info></wp-main-info>
                                         <wp-info-actions class="ttd fadeIn">
@@ -390,7 +390,7 @@
                                         </wp-info-actions>
                                     </wp-info-container>
                                 </wp-info>
-                                <wp-info tabindex="0" class="postcard trH"><img src="./images/prodajaZemljistaProjekti.jpeg" class="tt scale10percent addBlur wp-graphic">
+                                <wp-info tabindex="0" class="postcard trH"><img src="./images/prodajaZemljistaProjekti.jpeg" class="tt scale10percent wp-graphic">
                                     <wp-info-container class="tt darkenBackground">
                                         <wp-main-info></wp-main-info>
                                         <wp-info-actions class="ttd fadeIn">
@@ -404,7 +404,7 @@
                                         </wp-info-actions>
                                     </wp-info-container>
                                 </wp-info>
-                                <wp-info tabindex="0" class="postcard trH"><img src="./images/conference_room.jpg" class="tt scale10percent addBlur wp-graphic">
+                                <wp-info tabindex="0" class="postcard trH"><img src="./images/conference_room.jpg" class="tt scale10percent wp-graphic">
                                     <wp-info-container class="tt darkenBackground">
                                         <wp-main-info></wp-main-info>
                                         <wp-info-actions class="ttd fadeIn">
@@ -441,27 +441,27 @@
                         </wp-text-section>
                     </wp-box>
                     <wp-box class="contentSection trH">
-                        <wp-box class="tt scale10percent addBlur contentSectionImage" style="background-image: linear-gradient(-36deg, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.73)), url('./images/realEstate.jpg');"></wp-box>
+                        <wp-box class="tt scale10percent contentSectionImage" style="background-image: linear-gradient(-36deg, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.73)), url('./images/realEstate.jpg');"></wp-box>
                         <wp-text-section class="h1 contentData largeText">REAL ESTATE</wp-text-section>
                         <wp-text-section class="h3 contentData largeText tt fadeIn">Real estate management</wp-text-section>
                     </wp-box>
                     <wp-box class="contentSection trH">
-                        <wp-box class="tt scale10percent addBlur contentSectionImage" style="background-image: linear-gradient(-36deg, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.73)), url('./images/dizajn.jpg');"></wp-box>
+                        <wp-box class="tt scale10percent contentSectionImage" style="background-image: linear-gradient(-36deg, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.73)), url('./images/dizajn.jpg');"></wp-box>
                         <wp-text-section class="h1 contentData largeText">DESIGN</wp-text-section>
                         <wp-text-section class="h3 contentData largeText tt fadeIn">Designing the interior of clients' properties according to their preference</wp-text-section>
                     </wp-box>
                     <wp-box class="contentSection trH">
-                        <wp-box class="tt scale10percent addBlur contentSectionImage" style="background-image: linear-gradient(64deg, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.73)), url('./images/development.jpg');"></wp-box>
+                        <wp-box class="tt scale10percent contentSectionImage" style="background-image: linear-gradient(64deg, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.73)), url('./images/development.jpg');"></wp-box>
                         <wp-text-section class="h1 contentData largeText">DEVELOPMENT</wp-text-section>
                         <wp-text-section class="h3 contentData largeText tt fadeIn">Investment and development according to the clients' needs</wp-text-section>
                     </wp-box>
                     <wp-box class="contentSection trH">
-                        <wp-box class="tt scale10percent addBlur contentSectionImage" style="background-image: linear-gradient(64deg, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.73)), url('./images/vip_area.jpg');"></wp-box>
+                        <wp-box class="tt scale10percent contentSectionImage" style="background-image: linear-gradient(64deg, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.73)), url('./images/vip_area.jpg');"></wp-box>
                         <wp-text-section class="h1 contentData largeText">VIP SERVICE</wp-text-section>
                         <wp-text-section class="h3 contentData largeText tt fadeIn">Providing a top VIP services for the most demanding clients</wp-text-section>
                     </wp-box>
                     <wp-box class="contentSection trH">
-                        <wp-box class="tt scale10percent addBlur contentSectionImage" style="background-image: linear-gradient(-36deg, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.73)), url('./images/marketing.jpg');"></wp-box>
+                        <wp-box class="tt scale10percent contentSectionImage" style="background-image: linear-gradient(-36deg, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.73)), url('./images/marketing.jpg');"></wp-box>
                         <wp-text-section class="h1 contentData largeText">MARKETING</wp-text-section>
                         <wp-text-section class="h3 contentData largeText tt fadeIn">Marketing programs for clients' real estates, properties and businesses</wp-text-section>
                     </wp-box>
