--- a/index.html
+++ b/index.html
@@ -287,6 +287,9 @@
                 }
             }
             document.addEventListener('DOMContentLoaded', function(){ 
+                if(!/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
+                    document.getElementById("video").src = './videos/splitVideo.mp4'
+                }
                 document.querySelector('video').play()
             }, false);
         </script>
@@ -334,7 +337,7 @@
                     <wp-box class="" style="background-color: rgba(255, 255, 255, 0); width: 100vw; height: 70vh; position: relative; margin-top: calc(var(--headerHeight) * (-1));">
                         <wp-video class="wp-graphic videoPlayer_0" style="background-color: #333;">
                             <video playsinline autoplay muted loop>
-                                <source src="./videos/splitVideo.mp4" type="video/mp4">
+                                <source id='video' src="./videos/splitVideoMobile.mp4" type="video/mp4">
                             </video>
                         </wp-video>
                         <wp-box style="width: 40vw; height: 45vh; background-image:url(./images/bg1.png); background-size: cover; position: absolute; right: 0px; top: var(--headerHeight);"></wp-box>
