House selling url added

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                                         <wp-main-info></wp-main-info>
                                         <wp-info-actions class="ttd fadeIn">
                                             <wp-action class="action3 ">
-                                                <a>
+                                                <a href="https://www.njuskalo.hr/agencija/impacto-nekretnine?categoryId=9579">
                                                     <wp-action-text>
                                                         <wp-title>Houses for sale</wp-title>
                                                     </wp-action-text>
