--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta name="theme-color" content="#000000"> 
         <link rel="shortcut icon" href="./favicon.ico">
         <link rel="manifest" href="./manifest.json">
-        <title>AdriaINgroup</title>
+        <title>AdriaInGroup - real estate agency Split, Croatia</title>
+        <meta name="description" content="AdriaInGroup is the Real estate agency that can offer you everything from budget to luxury houses, apartments, villas or land at fair price in mediteranian setting, apartments or villas. We are based in Split, Dalmatia, Croatia." />
+
         <link id="fontAwesome" rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link id="googleFonts" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
         <link href="https://db.onlinewebfonts.com/c/3e13bee6781c476e142a2bca4d9ab99c?family=Kunstler+Script" rel="stylesheet" type="text/css"/>
